--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,26 @@ body {
 }
 
 #tile-container {
+	position: relative;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	background: url(../img/2.jpg);
+	/* background: url(../img/2.jpg); */
 	background-size: 100% 100%;
+}
+
+#bg{
+	position: absolute;
+	left:0;
+	top:0;
+	z-index: 0;
+	width: 100%;
+}
+
+#cvs-tiles {
+	width: 100%;
+	height: 100%;
+	z-index: 10;
 }
 
 #tile-container div {
@@ -35,7 +50,7 @@ body {
 	opacity: 0.5;
 }
 
-.btn{
+.btn {
 	min-width: 50px;
 	max-width: 300px;
 	height: 30px;
@@ -59,61 +74,101 @@ body {
 }
 
 #type-container {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0px;
 	width: 80vw;
 	height: 100px;
 	margin: 10px;
 	display: flex;
 	justify-content: flex-start;
+	align-items: center;
 }
 
 #type-container div {
 	width: 100px;
 	height: 80px;
 	border: 1px solid #000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 
-#type-container div.black.hl,
-#tile-container div.black {
+div.black {
+	color: #ffffff;
 	background-color: #000000;
 }
 
-#type-container div.wall.hl,
-#tile-container div.wall {
+div.wall {
 	color: #FFFFFF;
 	background-color: #808080;
 }
 
-#type-container div.floor.hl,
-#tile-container div.floor {
-	background-color: #ffffff;
+div.floor {
+	background-color: #FFCC66;
 }
 
-#type-container div.coin.hl,
-#tile-container div.coin {
+div.coin {
 	background-color: #FFFF33;
 }
 
-#type-container div.item.hl,
-#tile-container div.item {
+div.item {
 	background-color: #FF0033;
 }
 
-#type-container div.born.hl,
-#tile-container div.born {
+div.born {
 	background-color: #00FF00;
 }
 
-#type-container div.exit.hl,
-#tile-container div.exit {
+div.exit {
 	background-color: #0000FF;
 }
 
-#tile-container div.transparent {
+
+
+#hint {
+	position: fixed;
+	right: 10px;
+	top: 10px;
+	width: 150px;
+	height: 100px;
+	border: solid 1px #000000;
+}
+
+#hint div,
+#hint h5 {
+	height: 50px;
+	line-height: 50px;
+	text-align: left;
+	padding: 0;
+	margin: 0;
+}
+
+#hint h5 {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+#hint div {
+	display: inline-block;
+	width: 50px;
+	height: 50px;
+	border: solid 1px #000000
+}
+
+#type-container div.hl {
+	border: solid 5px red;
+}
+
+#tile-container div.transparent,
+#hint div.transparent {
 	background-color: #00ffffff;
 }
 
-#text-json-result{
+#text-json-result {
 	width: 1024px;
 	height: 1024px;
 }
