--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,10 @@ body {
 	background-size: 100% 100%;
 }
 
-#bg{
+#bg {
 	position: absolute;
-	left:0;
-	top:0;
+	left: 0;
+	top: 0;
 	z-index: 0;
 	width: 100%;
 }
@@ -77,12 +77,14 @@ body {
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0px;
+	left: 10px;
 	width: 80vw;
 	height: 100px;
 	margin: 10px;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
+	z-index: 999;
 }
 
 #type-container div {
@@ -125,7 +127,27 @@ div.exit {
 	background-color: #0000FF;
 }
 
+#grid-setting-container {
+	display: flex;
+	justify-content: space-around;
+	width: 300px;
+	height: 50px;
+	line-height: 50px;
+	font-size: 20px;
+}
 
+#ipt-grids-perline {
+	width: 200px;
+	text-align: center;
+}
+
+#btn-grid-line-ok {
+	width: 80px;
+	background: #FFFFFF;
+	color: #000000;
+	text-align: center;
+	border: solid 1px #000000;
+}
 
 #hint {
 	position: fixed;
@@ -159,26 +181,26 @@ div.exit {
 	border: solid 1px #000000
 }
 
-#map-transform{
+#map-transform {
 	position: fixed;
 	right: 10px;
 	top: 150px;
 	width: 150px;
 	height: 100px;
 	border: solid 1px #000000;
-	
+
 	text-align: center;
 	background: #000000;
-	color:#FFFFFF;
+	color: #FFFFFF;
 	line-height: 100px;
 }
 
-#map-transform a{
+#map-transform a {
 	position: absolute;
-	left:0;
-	top:0;
-	width:100%;
-	height:100%;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
 }
 
 #type-container div.hl {
